--- a/tasks.json
+++ b/tasks.json
@@ -1,7 +1,1 @@
-[
-    "Learn HTML",
-    "Learn CSS",
-    "Learn JavaScript",
-    "Learn PHP",
-    "Responsive Design"
-]
+["Learn HTML","Learn CSS","Learn JavaScript","Learn PHP","Responsive Design","Ciao","Ciao"]
