working on add tasks

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-["Learn HTML","Learn CSS","Learn JavaScript","Learn PHP","Responsive Design","Ciao","Ciao"]
+["Learn HTML","Learn CSS","Learn JavaScript","Learn PHP","Responsive Design","Lavare la macchina","Ciao"]
